--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,11 @@
     "bower_components",
     "test",
     "tests"
-  ]
+  ],
+  "dependencies": {
+    "angular": "^1.5.7",
+    "angular-route": "^1.5.7",
+    "angular-moment": "^0.10.3",
+    "bootstrap": "^3.3.6"
+  }
 }
