--- a/package.json
+++ b/package.json
@@ -16,5 +16,23 @@
     "express-session": "^1.14.0",
     "mongoose": "^4.5.4",
     "socket.io": "^1.4.8"
+  },
+  "devDependencies": {
+    "browser-sync": "^2.2.1",
+    "del": "^1.1.1",
+    "gulp": "^3.9.0",
+    "gulp-eslint": "^0.13.2",
+    "gulp-if": "^1.2.5",
+    "gulp-cache": "^0.2.8",
+    "gulp-imagemin": "^2.2.1",
+    "gulp-load-plugins": "^0.10.0",
+    "gulp-minify-css": "^1.1.1",
+    "gulp-minify-html": "^1.0.0",
+    "gulp-plumber": "^1.0.1",
+    "gulp-size": "^1.2.1",
+    "gulp-uglify": "^1.1.0",
+    "gulp-useref": "^1.1.1",
+    "main-bower-files": "^2.5.0",
+    "opn": "^1.0.1"
   }
 }
